--- a/introduction.tex
+++ b/introduction.tex
@@ -22,7 +22,7 @@ By providing free ASR web service it is possible to collect vast amount of recor
 Consequently, \textbf{the second goal of the thesis is to create an annotation interface}
   so that recordings obtained by CloudASR platform can be annotated and given back to the community.
 
-The following text will describe the development and deployment of CloudASR platform and of its annotation interface.
+The following text will describe the development and deployment of CloudASR platform and its annotation interface.
 Chapter~1 introduces Automatic Speech Recognition theory and tools related to CloudASR.
 In Chapter~2, tools used for CloudASR development and deployment are presented.
 The implementation of CloudASR platform is described in Chapter~3.
