--- a/thesis.tex
+++ b/thesis.tex
@@ -321,7 +321,8 @@ cloud, Kaldi, ASR
 \appendix
 \chapter{CD Content}
 
-%\chapter{Documentation}
+%\chapter{User Documentation}
+%\chapter{Developer Documentation}
 %\section{Installation}
 %\section{Deployment}
 %\section{Testing}
