--- a/abstract.tex
+++ b/abstract.tex
@@ -5,6 +5,6 @@ The platform supports both batch and online speech recognition mode
 The key features of the platform are scalability, customizability and easy deployment.
 The benchmarks of the platform show
   that the platform achieves comparable performance with Google Speech API in terms of latency
-  and it can achieve better accuracy on limitted domains.
+  and it can achieve better accuracy on limited domains.
 Furthermore, the benchmarks shows that the platform is able to handle more than 1000 parallel requests given enough computational resources.
 \bye
