--- a/thesis.tex
+++ b/thesis.tex
@@ -214,15 +214,15 @@ Mgr. Ing. Filip Jurčíček Ph.D., Ústav formální a aplikované lingvistiky
 % dle Organizační struktury MFF UK, případně plný název pracoviště mimo MFF UK
 
 Abstrakt:
-Tato diplomová práce představuje clodovou platformu pro automatické rozpoznávání řeči, CloudASR,
+Tato diplomová práce představuje cloudovou platformu pro automatické rozpoznávání řeči, CloudASR,
   která je postavena na systému pro rozpoznávání řeči Kaldi.
 Platforma podporuje dávkový a online způsob rozpoznávání řeči
   a také obsahuje anotační prostředí pro přidávání přepisů k odeslaným nahrávkám.
 Mezi klíčové vlastnosti této platformy patří škálovatelnost, přizpůsobitelnost a jednoduchý proces nasazení.
-Benchmarky ukazují,
+Provedená měření dokázala,
   že latence platformy je porovnatelná s latencí Google Speech API
   a přesnost přepisů na omezených doménách může být dokonce lepší.
-Dále benchmarky ukazují,
+Dále bylo ukázáno,
   že je platforma schopná zpracovat více než 1000 paralelních dotazů,
   pokud má dostatek výpočetních zdrojů.
 % abstrakt v rozsahu 80-200 slov; nejedná se však o opis zadání diplomové práce
